<resources>
    <string name="app_name">Wine&amp;Dine</string>

    <string name="welcome">Your wine profile, one login away</string>
    <string name="already_registered">Are you not registered yet?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="create_a_new_account">Create new account</string>
    <string name="or">or</string>
    <string name="signup">Sign up</string>

    <!-- Errors -->
    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The credentials you entered are incorrect</string>
    <string name="error_invalid_password">The password must be at least 8 characters long</string>
    <string name="error_retireving_bottles">There was an error retrieving the bottles</string>
    <string name="error_retireving_dishes">There was an error retrieving dishes</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unexpected">Something unexpected happened</string>
    <string name="error_collision_user">An account already exists for this email</string>
    <string name="error_title">Error</string>
    <string name="error_sign_in_required">Please sign in to manage your favourites</string>
    <string name="error_loading_recipe">Could not load the recipe: %1$s</string>
    <string name="error_loading_wines">Could not load the wines</string>
    <string name="error_missing_ingredients">No pairing ingredients were found</string>
    <string name="error_missing_ingredient_filter">No ingredient filter was provided</string>
    <string name="wineSection">Wine</string>
    <string name="favoriteSection">Favorite</string>


    <string name="recipe_image">Recipe image</string>
    <string name="wine_image">Wine bottle image</string>
    <string name="profile">Profile</string>
    <string name="description_heading">Description</string>
    <string name="rating_and_price_heading">Rating and price</string>
    <string name="information_heading">Information</string>
    <string name="discover_pairings">Discover pairings</string>
    <string name="show_full_recipe">Show full recipe</string>
    <string name="more_nutrition_info">More nutrition information</string>
    <string name="review_count">%1$d reviews</string>
    <string name="score_out_of_100">%1$.1f/100</string>
    <string name="preparation_time_minutes">Preparation time: %1$d min</string>
    <string name="servings">Servings: %1$d</string>
    <string name="logout_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logging_out">Signing out…</string>
    <string name="logout_timeout">Signing out timed out. Please try again.</string>
    <string name="logout_error">Error while logging out</string>
    <string name="logout">Logout</string>
    <string name="explore_signUp">Sign up to explore the world of wine</string>

</resources>
