<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    <!--tools:context=".ui.welcome.WelcomeActivity"> -->


       <ImageView
           android:id="@+id/imageView"
           android:layout_width="match_parent"
           android:layout_height="250dp"
           app:srcCompat="@drawable/img_login"
           />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#d1c9bc"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#b4a998"
        android:text="@string/already_registered"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="#80FFFFFF"
        style="?attr/textInputOutlinedStyle"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        style="?attr/textInputOutlinedStyle"
        android:background="#80FFFFFF"
        app:startIconDrawable="@drawable/baseline_password_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="#00000000"/>



    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="157dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#d1c9bc"

            android:text="@string/login" />

        <View
            android:layout_width="16dp"
            android:layout_height="60dp"/>

        <Button
            android:id="@+id/loginGoogleButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="157dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/login_with_google"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            android:backgroundTint="#d1c9bc"
            app:iconTint="@null" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/text_or"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_centerInParent="true"
            android:background="#555"/>

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-4dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@+id/text_or"
            android:layout_centerInParent="true"
            android:background="#555" />


    </RelativeLayout>

    <Button
        android:id="@+id/buttonNewAccount"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="#d1c9bc"
        android:text="@string/create_a_new_account" />


</LinearLayout>